--- a/styles.css
+++ b/styles.css
@@ -36,11 +36,14 @@ body {
 }
 
 .dark {
-  --clr-bg: #23283e;
+  --clr-bg: #1b1c1d;
+  /* --clr-bg: #23283e; */
   --clr-bg-alt: #2a2f4c;
   --clr-fg: #bdbddd;
-  --clr-fg-alt: #cdcdff;
-  --clr-primary: #90a0d9;
+  --clr-fg-alt: #bbb7af;
+  /* --clr-fg-alt: #cdcdff; */
+  --clr-primary: rgb(129, 172, 219);#81acdb
+  /* --clr-primary: #90a0d9; */
   --shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
     rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
